<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
        android:text="@string/STR_REPLACE_TIPS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DefaultText"
        android:layout_margin="@dimen/MARGIN_NORMAL_SIZE"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </LinearLayout>

    <Button
        android:text="@string/STR_LOCAL_VIDEO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLocal"
        android:layout_marginLeft="@dimen/MARGIN_NORMAL_SIZE"
        android:layout_marginRight="@dimen/MARGIN_NORMAL_SIZE"/>

    <Button
        android:text="@string/STR_FAV_VIDEO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnFav"
        android:layout_margin="@dimen/MARGIN_NORMAL_SIZE"/>
</LinearLayout>
